--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="opensdk_main_bg">#f0f0f1</color>
+    <!-- 橘色字体 -->
+    <color name="orange_text">#df2d10</color>
+    <color name="black_text">#333333</color>
 </resources>
