改变状态栏颜色。 退出登录提示框新增图标。 主页面新增下拉列表，没有设备时显示可点击的图标提示。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="opensdk_main_bg">#f0f0f1</color>
+    <color name="c4">#8d8d8d</color>
+    <color name="transparent">#00ffffff</color>
     <!-- 橘色字体 -->
     <color name="orange_text">#df2d10</color>
     <color name="black_text">#333333</color>
