--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,23 +18,9 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/user"
+            android:background="@drawable/my"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_more"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/more"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_toRightOf="@id/btn_user"
-            android:padding="5dp"
-            android:clickable="true"
-            android:focusable="true"/>
-<!--            android:onClick="onClickMoreFeatures"/>-->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -63,8 +49,6 @@
 
         </LinearLayout>
 
-
-
         <Button
             android:id="@+id/btn_add"
             android:layout_width="30dp"
@@ -77,19 +61,47 @@
 
     </RelativeLayout>
 
+    <!--下拉刷新view
+    android:drawingCacheQuality="high" 设置绘图时半透明质量。
+    android:fadingEdge="none" 设置拉滚动条时，边框渐变的方向。
+    android:fastScrollEnabled="false" 关闭右侧可以拉动的滚动条
+    android:listSelector="@null" 设置点击选项时选项背景无变化不变色
+    android:overScrollFooter="@null" 设置滑动到底部的背景或颜色-->
+    <ncist.wl171.intelligentcloudvideo.pulltorefresh.PullToRefreshListView
+        android:id="@+id/camera_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/title"
+        android:layout_marginBottom="3dp"
+        android:cacheColorHint="@color/transparent"
+        android:divider="@color/transparent"
+        android:drawingCacheQuality="high"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:listSelector="@null"
+        android:overScrollFooter="@null"
+        android:scrollingCache="true"/>
 
-<!--    <TextView-->
-<!--        android:id="@+id/txt_welcome"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="主页面"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:textSize="36sp"-->
-<!--        android:textStyle="bold"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.494"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.18" />-->
+    <LinearLayout
+        android:id="@+id/no_camera_tip_ly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:onClick="onClick"
+        android:orientation="vertical"
+        android:visibility="visible"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/my_no_video"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/not_find_any_devices"
+            android:layout_marginTop="10dp"/>
+
+    </LinearLayout>
 </RelativeLayout>
