--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,15 +37,15 @@
                 android:textColor="@color/orange_text"
                 android:textSize="20sp"/>
 
-            <TextView
-                android:id="@+id/text_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:text="@string/share_devices"
-                android:textColor="@color/black_text"
-                android:textSize="20sp"/>
+            <Button
+                android:id="@+id/btn_refresh"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/refresh"
+                android:onClick="onClick"
+                android:layout_marginBottom="7dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="20dp"/>
 
         </LinearLayout>
 
