--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,15 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_bg">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="opensdk_main_bg">#f0f0f1</color>
     <color name="c4">#8d8d8d</color>
     <color name="transparent">#00ffffff</color>
     <color name="gray">#adadad</color>
+    <color name="common_bg">#f0f0f3</color>
+    <color name="viewfinder_frame">#929292</color>
+    <color name="common_sub_text">#888888</color>
     <!-- 橘色字体 -->
     <color name="orange_text">#df2d10</color>
     <color name="black_text">#333333</color>
