--- a/app/src/main/res/layout/ezopen_realplay_operate_bar.xml
+++ b/app/src/main/res/layout/ezopen_realplay_operate_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/ezopen_realplay_operate_bar"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -11,22 +11,25 @@
 		android:id="@+id/realplay_operate_ly"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
 		android:layout_gravity="center_vertical|center_horizontal"
-		android:orientation="vertical" >
+		android:orientation="vertical"
+		android:visibility="visible">
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_marginBottom="10dp"
 			android:gravity="center"
-			android:orientation="horizontal"
-			android:layout_marginBottom="10dp">
+			android:orientation="horizontal">
 
 			<LinearLayout
 				android:id="@+id/realplay_ptz_btn_ly"
 				android:layout_width="100dp"
 				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:gravity="center_horizontal">
+				android:layout_marginRight="10dp"
+				android:gravity="center_horizontal"
+				android:orientation="vertical">
 
 				<ImageButton
 					android:id="@+id/realplay_ptz_btn"
@@ -38,9 +41,9 @@
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_gravity="center"
 					android:layout_marginTop="7dp"
 					android:text="云台"
-					android:layout_gravity="center"
 					android:textColor="@color/common_sub_text"
 					android:textSize="12dp" />
 
@@ -50,8 +53,9 @@
 				android:id="@+id/realplay_talk_btn_ly"
 				android:layout_width="100dp"
 				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:gravity="center_horizontal">
+				android:layout_marginLeft="10dp"
+				android:gravity="center_horizontal"
+				android:orientation="vertical">
 
 				<ImageButton
 					android:id="@+id/realplay_talk_btn"
@@ -63,15 +67,95 @@
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_gravity="center"
 					android:layout_marginTop="7dp"
 					android:text="对讲"
-					android:layout_gravity="center"
 					android:textColor="@color/common_sub_text"
 					android:textSize="12dp" />
 
 			</LinearLayout>
 
 		</LinearLayout>
-
 	</LinearLayout>
-</HorizontalScrollView>
+
+	<ImageButton
+		android:id="@+id/ptz_close_btn"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentRight="true"
+		android:background="@drawable/play_close_selector"
+		android:onClick="onClick"
+		android:visibility="gone" />
+
+	<LinearLayout
+		android:id="@+id/ptz_control_ly"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
+		android:layout_marginStart="5dp"
+		android:layout_marginTop="5dp"
+		android:layout_marginEnd="5dp"
+		android:layout_marginBottom="5dp"
+		android:background="@drawable/ptz_bg"
+		android:orientation="vertical"
+		android:visibility="gone">
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center|center_vertical"
+			android:orientation="horizontal">
+
+			<ImageButton
+				android:id="@+id/ptz_top_btn"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:background="@null" />
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="0"
+			android:orientation="horizontal">
+
+			<ImageButton
+				android:id="@+id/ptz_left_btn"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="3"
+				android:background="@null" />
+
+			<ImageButton
+				android:id="@+id/ptz_flip_btn"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="2"
+				android:background="@drawable/ptz_turn_selector"
+				android:visibility="invisible" />
+
+			<ImageButton
+				android:id="@+id/ptz_right_btn"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="3"
+				android:background="@null" />
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center|center_vertical"
+			android:orientation="horizontal">
+
+			<ImageButton
+				android:id="@+id/ptz_bottom_btn"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:background="@null" />
+		</LinearLayout>
+	</LinearLayout>
+</RelativeLayout>
