--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="viewfinder_frame">#929292</color>
     <color name="common_sub_text">#888888</color>
     <color name="quality_focused_color">#448cf3</color>
+    <color name="common_text">#333333</color>
     <!-- 橘色字体 -->
     <color name="orange_text">#df2d10</color>
     <color name="black_text">#333333</color>
