--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="common_sub_text">#888888</color>
     <color name="quality_focused_color">#448cf3</color>
     <color name="common_text">#333333</color>
+    <color name="auto_tip_text">#888888</color>
+    <color name="scan_yellow">#e56b19</color>
     <!-- 橘色字体 -->
     <color name="orange_text">#df2d10</color>
     <color name="black_text">#333333</color>
