--- a/app/src/main/res/layout/cameralist_small_item.xml
+++ b/app/src/main/res/layout/cameralist_small_item.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/camera_item_rl"
     android:layout_width="fill_parent"
-    android:layout_height="73dp"
+    android:layout_height="75dp"
     android:background="@drawable/display_frame"
     android:clickable="true"
     android:orientation="horizontal" >
     <RelativeLayout
         android:id="@+id/item_icon_area"
         android:layout_width="112dp"
-        android:layout_height="63dp"
+        android:layout_height="65dp"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
@@ -35,7 +35,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="73dp"
+        android:layout_height="75dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/item_icon_area"
@@ -62,7 +62,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginTop="4dp"
             android:gravity="left|center_vertical|start"
@@ -71,11 +71,10 @@
 
             <RelativeLayout
                 android:id="@+id/tab_alarmlist_rl"
-                android:layout_width="fill_parent"
+                android:layout_width="50dp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:layout_weight="3"
                 android:background="@null"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -87,16 +86,16 @@
                     android:layout_centerHorizontal="true"
                     android:background="@null"
                     android:gravity="center"
-                    android:src="@drawable/open_cameralist_alarmlist_selector" />
+                    android:src="@drawable/open_cameralist_alarmlist_selector"
+                    android:scaleType = "fitCenter"/>
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/tab_setdevice_rl"
-                android:layout_width="fill_parent"
+                android:layout_width="50dp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:layout_weight="3"
                 android:background="@null"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -108,7 +107,8 @@
                     android:layout_centerHorizontal="true"
                     android:background="@null"
                     android:gravity="center"
-                    android:src="@drawable/open_cameralist_setup_selector" />
+                    android:src="@drawable/open_cameralist_setup_selector"
+                    android:scaleType = "fitCenter"/>
             </RelativeLayout>
         </LinearLayout>
 
